--- a/.gitignore
+++ b/.gitignore
@@ -15,7 +15,7 @@
 /log/*.log
 /tmp
 
-# Ignore application configuration
+Ignore application configuration
 /config/application.yml
 
 #Ignore Rails security token
